sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/Asset_Maintenance_Task__c.object-meta.xml
<CustomObject>
    <description>Object to hold the asset maintenance tasks</description>
    <label>Asset Maintenance Task</label>
    <nameField>
        <label>Asset Maintenance Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Maintenance Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>