sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Asset_Maintenance_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maintenance_Schedule__c</fullName>
    <description>Field links asset task and asset maintenance schedule tasks</description>
    <label>Asset Maintenance Schedule</label>
    <referenceTo>Asset_Maintenance_Schedule__c</referenceTo>
    <relationshipLabel>Asset Maintenance Tasks</relationshipLabel>
    <relationshipName>Asset_Maintenance_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>