sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/assetId__c.field-meta.xml
<CustomField>
    <fullName>assetId__c</fullName>
    <formula>Asset_Maintenance_Schedule__r.Sanergy_Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>assetId</label>
    <type>Text</type>
</CustomField>