sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person Maintenance Task is assigned to</description>
    <label>Assigned To</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Maintenance Tasks</relationshipLabel>
    <relationshipName>Asset_Maintenance_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>