sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Clone_Service_Items__c.field-meta.xml
<CustomField>
    <fullName>Clone_Service_Items__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Clone Service Items</label>
    <type>Checkbox</type>
</CustomField>