sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Maintenance completion Date</description>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>