sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/CreateTask__c.field-meta.xml
<CustomField>
    <fullName>CreateTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Task?</label>
    <type>Checkbox</type>
</CustomField>