sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Dim_1__c.field-meta.xml
<CustomField>
    <fullName>Dim_1__c</fullName>
    <formula>Asset_Maintenance_Schedule__r.Sanergy_Asset__r.Dim_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dim 1</label>
    <type>Text</type>
</CustomField>