sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/GLA__c.field-meta.xml
<CustomField>
    <fullName>GLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GLA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>gla</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Asset Maintenance Tasks</relationshipLabel>
    <relationshipName>Asset_Maintenance_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>