sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Inventory_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Requisition</label>
    <referenceTo>Inventory_Requisition__c</referenceTo>
    <relationshipLabel>Asset Maintenance Tasks</relationshipLabel>
    <relationshipName>Asset_Maintenance_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>