sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Is_Retrospective__c.field-meta.xml
<CustomField>
    <fullName>Is_Retrospective__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retrospective?</label>
    <type>Checkbox</type>
</CustomField>