sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading__c</fullName>
    <label>Meter Reading</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>