sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Metric_UOM__c.field-meta.xml
<CustomField>
    <fullName>Metric_UOM__c</fullName>
    <formula>TEXT(Asset_Maintenance_Schedule__r.Sanergy_Asset__r.measurement_unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metric (UOM)</label>
    <type>Text</type>
</CustomField>