sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Next_Reading__c.field-meta.xml
<CustomField>
    <fullName>Next_Reading__c</fullName>
    <formula>Sanergy_Asset__r.Current_Reading__c  +  Proposed_Reading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Service Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>