sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Next_Task_Proposed_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Proposed_Date__c</fullName>
    <label>Next Task Proposed Date</label>
    <type>Date</type>
</CustomField>