sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Perform_Task__c.field-meta.xml
<CustomField>
    <fullName>Perform_Task__c</fullName>
    <formula>IF(AND( OR(Sanergy_Asset__r.Current_Reading__c  &gt;= (Planned_Meter_Reading__c  * 0.9) ,Sanergy_Asset__r.Current_Reading__c &gt; Planned_Meter_Reading__c  ),  NOT(ISPICKVAL(Status__c, &#39;Completed&#39;)) ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perform Task?</label>
    <type>Checkbox</type>
</CustomField>