sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Planned_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Planned_Meter_Reading__c</fullName>
    <description>Gives you the meter Reading when this Task should be done.</description>
    <inlineHelpText>Gives you the meter Reading when this Task should be done.</inlineHelpText>
    <label>Planned  Meter Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>