sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Procurement_Request__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procurement Request</label>
    <referenceTo>Procurement_Tracking_Sheet__c</referenceTo>
    <relationshipLabel>Asset Maintenance Tasks</relationshipLabel>
    <relationshipName>Asset_Maintenance_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>