sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Proposed_Reading__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Reading__c</fullName>
    <label>next service after</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>