sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Proposed_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Service_Date__c</fullName>
    <label>Planned Service Date</label>
    <type>Date</type>
</CustomField>