sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Repair_Cost__c</fullName>
    <label>Repair Cost</label>
    <summarizedField>Maintenance_Service_Items__c.Unit_Item_Cost__c</summarizedField>
    <summaryForeignKey>Maintenance_Service_Items__c.Asset_Maintenance_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>