sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Requesting_Company__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Company__c</fullName>
    <formula>Asset_Maintenance_Schedule__r.Sanergy_Asset__r.Requesting_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requesting Company</label>
    <type>Text</type>
</CustomField>