sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Sanergy_Asset__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanergy Asset</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Asset Maintenance Tasks</relationshipLabel>
    <relationshipName>Asset_Maintenance_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>