sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>Date serviced</description>
    <label>Actual Service Date</label>
    <type>Date</type>
</CustomField>