sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/fields/Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Description__c</fullName>
    <label>Unit Description</label>
    <type>TextArea</type>
</CustomField>