sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/recordTypes/Firmed.recordType-meta.xml
<RecordType>
    <fullName>Firmed</fullName>
    <active>true</active>
    <label>Firmed</label>
</RecordType>