sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/recordTypes/Open.recordType-meta.xml
<RecordType>
    <fullName>Open</fullName>
    <active>true</active>
    <label>Open</label>
</RecordType>