sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/validationRules/CheckIfStatusComleted.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIfStatusComleted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &#39;Completed&#39;), CreateTask__c = TRUE ,AND( ISBLANK( Proposed_Service_Date__c ),  ISBLANK(Proposed_Reading__c),ISBLANK(Next_Task_Proposed_Date__c)))</errorConditionFormula>
    <errorMessage>Please Input Planned Service Date, Next Task Proposed Date and next service due at date</errorMessage>
</ValidationRule>