sfSandBoxCode/force-app/main/default/objects/Asset_Maintenance_Task__c/validationRules/UpdateMeteReadStatusInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>UpdateMeteReadStatusInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Meter_Reading__c ) ,  NOT( ISPICKVAL( Status__c , &#39;In Progress&#39;) )  )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot update Meter Reading if status is not in progress</errorMessage>
</ValidationRule>